--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Description" />
+    <meta
+      name="description"
+      content="The Watoto Library works to better the lives of children in Kibera by providing free access to a library where kids can come in and read books, do their school assignments, or get free academic assistance and materials."
+    />
     <link rel="apple-touch-icon" href="favicon.ico" />
     <script
       src="https://kit.fontawesome.com/0089d70253.js"
